// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb.Item /> renders correctly when an href prop is passed 1`] = `
<li
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <a
    className="gpukZq boAnYn"
    href="/"
    onClick={null}
    rel="_self"
    size="uno"
    target=""
  >
    Home
  </a>
</li>
`;

exports[`<Breadcrumb.Item /> renders correctly when no href prop is passed 1`] = `
<li
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <span
    className="gKcTgw hCDblW"
    href={null}
    onClick={null}
    rel="_self"
    size="uno"
    target=""
  >
    Home
  </span>
</li>
`;
